oxiplate-derive/tests/broken/extends/extends.stderr
error[E0609]: no field `title` on type `&AbsoluteData`
 --> templates/extends-wrapper.html.oxip
  |
  | <title>{{ title }}</title>
  |           ^^^^^ unknown field
